# XSStrike

./: .envrc  pyproject.toml  requirements.txt  xsstrike.py
.junie/: guidelines.md
config/: default.json
core/: ai_integration.py  checker.py  config.py  config_manager.py  dom.py  engine.py  fuzzer.py  htmlParser.py  jsContexter.py  knowledge_base.py  log.py  output_formatter.py  payload_generator.py  photon.py  plugin_manager.py  rag_system.py  report_generator.py  request_cache.py  requester.py  smart_payload_selector.py  updater.py
data/: knowledge_base.db
docs/: ai_features.md  implementation_summary.md  plan.md  tasks.md
interfaces/: __init__.py  api.py  base.py  cli.py
modes/: crawl.py  scan.py  singleFuzz.py
plugins/: example_plugin.py  retireJs.py  retire_js_plugin.py
scripts/: analyze_dependencies.py  update_dependencies.py
tests/: test_checker.py  test_colors.py  test_engine.py  test_plugin_manager.py  test_utils.py
